--- a/readme
+++ b/readme
@@ -1,9 +1,3 @@
 Site doce Delicia
 
-
-(titulo)
-Tudo criado e preparado com amor e carinho para aquele momento especial.
-
-(descricao)
-Qualquer momento seu é único: um aniversário, uma reunião com amigos, festa em família, casamento,
- comemoração, um café com alguém querido ou até aquele momento que é só seu, tem um sabor especial.
+pagina Criada  de maneira responsiva que se adapta em dispositivos moveis e para desktop.
